# tpt-flight-control

./: .gitignore  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  spec.txt  todo.md
.github/workflows/: ci.yml  kani.yml
certification/: Cargo.toml  airworthiness-security.md  ci-qualification.md  environmental-qualification.md  hardware-assurance.md  path-to-type-certification.md  plan-for-software-aspects-of-certification.md  software-accomplishment-summary.md  software-configuration-index.md  software-verification-plan.md  system-safety-assessment.md
certification/src/: lib.rs
certification/traceability/: README.md  matrix.md
docs/: Cargo.toml  architecture-dissimilar-nav.md  architecture-redundancy.md  architecture-web.md
docs/src/: lib.rs
reference-hardware/: Cargo.toml
reference-hardware/src/: lib.rs
scripts/: audit.sh  vendor.sh
tpt-abstractions/: Cargo.toml
tpt-abstractions/src/: actuators.rs  lib.rs  os.rs  sensors.rs  spatial.rs  types.rs
tpt-backend-bare-metal/: Cargo.toml
tpt-backend-bare-metal/src/: board.rs  hal.rs  lib.rs  superloop.rs
tpt-backend-freertos/: Cargo.toml
tpt-backend-freertos/src/: lib.rs
tpt-backend-pikeos/: Cargo.toml
tpt-backend-pikeos/src/: lib.rs  partition.rs
tpt-backend-sel4/: Cargo.toml
tpt-backend-sel4/src/: lib.rs  microkernel.rs
tpt-backend-vxworks/: Cargo.toml
tpt-backend-vxworks/src/: lib.rs
tpt-backend-zephyr/: Cargo.toml
tpt-backend-zephyr/src/: lib.rs
tpt-core/: Cargo.toml
tpt-core/src/: autopilot.rs  autopilot_avoidance.rs  control.rs  envelope.rs  formation.rs  fsm.rs  glide.rs  guidance.rs  lib.rs  nav.rs  pid.rs  prognostics.rs  redundancy.rs  scheduler.rs  state.rs  swarm.rs
tpt-gcs/: Cargo.toml
tpt-gcs/src/: command.rs  console.rs  dashboard.rs  lib.rs  link.rs  telemetry.rs  ui.rs
tpt-mapping/: Cargo.toml
tpt-mapping/src/: lib.rs
tpt-mapping/src/octree/: mod.rs
tpt-mapping/src/slam/: mod.rs
tpt-mapping/src/tan/: mod.rs
tpt-mapping/src/vio/: mod.rs
tpt-math/: Cargo.toml
tpt-math/src/: angles.rs  kalman.rs  lib.rs
tpt-mixer/: Cargo.toml
tpt-mixer/src/: dep.rs  lib.rs  quad_x.rs  tiltrotor.rs
tpt-protocols/: Cargo.toml
tpt-protocols/src/: antispoof.rs  arinc.rs  chacha.rs  companion.rs  integrity.rs  lib.rs  mavlink.rs  sha256.rs  tptlink.rs
tpt-sensor-fusion/: Cargo.toml
tpt-sensor-fusion/src/: ahrs.rs  dissimilar.rs  ekf.rs  lib.rs  nav_health.rs
tpt-sim/: Cargo.toml
tpt-sim/examples/: gps_denied_quickstart.rs  replay.rs
tpt-sim/src/: environment.rs  lib.rs  main.rs  plant.rs  replay.rs  scenarios.rs  sim.rs
tpt-sim/tests/: hover.rs
tpt-sovereign-toolchain/: Cargo.toml
tpt-sovereign-toolchain/src/: lib.rs
tpt-web/: Cargo.toml  index.html
tpt-web/examples/: dashboard.rs  sitl_demo.rs
tpt-web/src/: lib.rs  ui.rs
