[package]
name = "tpt-mapping"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Onboard mapping, VIO, LiDAR SLAM, and TAN/TERCOM for GPS-denied nav"

[dependencies]
tpt-math.workspace = true
tpt-abstractions.workspace = true
libm = "0.2"

[lints.rust]
# `cfg(kani)` is supplied by the Kani compiler when running `cargo kani`; it is
# not a Cargo dependency. Register it so `-D warnings` CI does not flag it as an
# unexpected cfg.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
