[package]
name = "tpt-math"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Verified-friendly, no_std math library for TPT Flight Control (vectors, quaternions, Kalman)"

[dependencies]
nalgebra.workspace = true

[lints.rust]
# `cfg(kani)` is supplied by the Kani compiler when running `cargo kani`; it is
# not a Cargo dependency. Register it so `-D warnings` CI does not flag it as an
# unexpected cfg.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
