[package]
name = "tpt-mixer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Actuator mixing and distributed propulsion for TPT Flight Control"

[dependencies]
tpt-math.workspace = true

[features]
default = ["mixer-quad", "mixer-dep", "mixer-tilt"]
mixer-quad = []
mixer-dep = []
mixer-tilt = []
mixer-surface = []
