[package]
name = "tpt-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Physics simulator and SITL for TPT Flight Control (GPS-denied scenarios)"

[[bin]]
name = "tpt-sim"
path = "src/main.rs"

[dependencies]
tpt-math.workspace = true
tpt-abstractions.workspace = true
tpt-core = { workspace = true, features = ["triple-redundancy"] }
tpt-mixer.workspace = true
tpt-sensor-fusion.workspace = true
