[package]
name = "tpt-sovereign-toolchain"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Custom qualified compiler wrapper for the TPT Sovereign stack"

[features]
# Marks builds using the formally verified compiler subset (§13, §16).
verified-subset = []

[dependencies]
