[package]
name = "tpt-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Web dashboard (Rust wasm + leptos) for TPT Flight Control (spec.txt §15.4)"

[dependencies]
tpt-math.workspace = true
tpt-core.workspace = true
tpt-sensor-fusion.workspace = true
tpt-gcs.workspace = true

# `leptos` is the browser UI framework for the live dashboard. It is declared
# as an *optional* dependency enabled by the `web` feature (instead of the
# older `cargo add leptos --features web` dance) so the WASM demo builds
# reproducibly with a single command and the host/test build stays free of the
# heavy wasm UI dependency tree. See `examples/sitl_demo.rs` and
# `docs/architecture-web.md`.
leptos = { version = "0.6", optional = true, features = ["csr"] }

# `tpt-sim` powers the in-browser SITL demo: a GPS-denied scenario is run
# client-side and streamed into the dashboard (no vehicle, no install).
tpt-sim = { workspace = true, optional = true }

[features]
default = []
web = ["dep:leptos", "dep:tpt-sim"]

[[example]]
name = "dashboard"
required-features = ["web"]

[[example]]
name = "sitl_demo"
required-features = ["web"]
